fix 검색 내 정렬 안됨 해결 (중간커밋)